$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-08-03 [A] First version of the SSH2/SFTP module {zmarty}
2008-07-30 [A] Created the first version of the FTP Storage module config tab, in admin.php {zmarty}
2008-07-30 [A] Coded a way for storage module to register config tabs for admin.php {zmarty}
2008-07-26 [A] The active storage module can be configured in admin.php {zmarty}
2008-07-22 [A] Files can now be renamed when using the FTP module + bugfixes {zmarty}
2008-07-16 [B] Removed useless echo of "pzida" that someone (probably me) accidentally put in index.php
2008-07-16 [A] Beginnings of the API album list function
2008-07-10 [B] Fixed API upload permissions - different user groups now respected {daorange}
2008-07-06 [B] Fixed a general Coppermine bug that prevented editing images containing a tilda ~ {zmarty}
2008-07-06 [B] Fixed the loading of images in pic_editor.php when the filename contains a tilda ~ {zmarty}
2008-07-06 [B] De-activated the ftp storage module, was activated by default {zmarty}
2008-07-06 [A] User-based sharding now works {zmarty}
2008-07-06 [B] Fixed FTP-related table indexes in schema.sql {zmarty}
2008-07-05 [A] API picture uploads are now possible.  Note that I added "if (!defined('API_CALL'))" in a few places {daorange}
2008-07-05 [A] Crop and Rotate (pic_editor.php) now uses the storage modules {zmarty}
2008-07-04 [B] Decommented code previously commented by Sameera {zmarty}
2008-06-24 [M] Updates to the oauth/ folder, /oauth_register.php added {daorange}
2008-06-17 [M] Continued work on the oauth/ folder, mostly authorize.php {daorange}